crates/plotnik-lib/tests/04-emit/linking/field_on_node_without_fields.txt
Q = (identifier
  name: (identifier) @inner
) @id
==== diagnostics ====
error: field `name` is not valid on this node type
 --> query.ptk:2:3
  |
1 | Q = (identifier
  |      ---------- on `identifier`
2 |   name: (identifier) @inner
  |   ^^^^
  |
help: `identifier` has no fields
